# ogdf-rs

./: .gitignore  Cargo.toml  Makefile  Readme.md  build.rs  run.sh  test_leek.sh
c_wrapper/: .gitignore  CMakeLists.txt  graph.cpp  graph.h  main.cpp  test.cpp
c_wrapper/ogdf/: .gitignore
c_wrapper/ogdf/src/ogdf/basic/memory/: PoolMemoryAllocator.cpp
c_wrapper/src/: graph.cpp  graph.h  main.cpp  test.cpp  test.h
c_wrapper/src/generate/: generate.cpp  generate.h  random.cpp  random.h
c_wrapper/src/io/: reader.cpp  reader.h  writer.cpp  writer.h
src/: error.rs  graph_io.rs  graph_raw.rs  helper.rs  lib.rs  main.rs
src/generate/: mod.rs  random.rs
src/io/: reader.rs  writer.rs
tests/: generate.rs  graph_io.rs  graph_raw.rs  io.rs
